kubernetes/apps/media/kavita/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kavita
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kavita.toskbot.xyz`)
      kind: Rule
      services:
        - name: kavita
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # external-dns.home.arpa/enabled: "true"
    # external-dns.alpha.kubernetes.io/target: ingress.toskbot.xyz
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
    - host: kavita.toskbot.xyz
  # tls:
  # - hosts:
  #   - kavita.toskbot.xyz
